--- a/Final Lab Exam FA20-BCS-042/views/dashboard.ejs
+++ b/Final Lab Exam FA20-BCS-042/views/dashboard.ejs
@@ -7,9 +7,59 @@
             <div class="card-body">
               <h5 class="card-title"><%= game.name %></h5>
               <p class="card-text">Price: <%= game.price %></p>
+              <form action="/games/<%= game._id %>?_method=DELETE" method="POST" class="d-inline">
+                <button type="submit" class="btn btn-danger">Delete</button>
+              </form>
+              <button type="button" class="btn btn-primary edit-btn">Edit</button>
+              <form action="/games/<%= game._id %>" method="POST" class="edit-form d-none">
+                <input type="hidden" name="_method" value="PUT">
+                <div class="form-group">
+                  <label for="editName">Name:</label>
+                  <input type="text" class="form-control" id="editName" name="name" value="<%= game.name %>">
+                </div>
+                <div class="form-group">
+                  <label for="editPrice">Price:</label>
+                  <input type="text" class="form-control" id="editPrice" name="price" value="<%= game.price %>">
+                </div>
+                <button type="submit" class="btn btn-primary">Save</button>
+              </form>
             </div>
           </div>
         </div>
       <% }) %>
     </div>
+    <div class="mt-4">
+      <button type="button" class="btn btn-success" id="addGameBtn">Add Game</button>
+      <form action="/games" method="POST" class="add-game-form d-none mt-4">
+        <div class="form-group">
+          <label for="gameName">Name:</label>
+          <input type="text" class="form-control" id="gameName" name="name">
+        </div>
+        <div class="form-group">
+          <label for="gamePrice">Price:</label>
+          <input type="text" class="form-control" id="gamePrice" name="price">
+        </div>
+        <button type="submit" class="btn btn-success">Submit</button>
+      </form>
+    </div>
   </div>
+  
+  <script>
+    // Add event listeners to the edit buttons
+    const editBtns = document.getElementsByClassName('edit-btn');
+    Array.from(editBtns).forEach(btn => {
+      btn.addEventListener('click', function () {
+        const cardBody = this.parentElement;
+        const editForm = cardBody.getElementsByClassName('edit-form')[0];
+        editForm.classList.toggle('d-none');
+      });
+    });
+  
+    // Add event listener to the add game button
+    const addGameBtn = document.getElementById('addGameBtn');
+    addGameBtn.addEventListener('click', function () {
+      const addGameForm = document.getElementsByClassName('add-game-form')[0];
+      addGameForm.classList.toggle('d-none');
+    });
+  </script>
+  
