--- a/Final Lab Exam FA20-BCS-042/public/stylesheets/style.css
+++ b/Final Lab Exam FA20-BCS-042/public/stylesheets/style.css
@@ -6,3 +6,47 @@ body {
 a {
   color: #00B7FF;
 }
+
+.login-form, .signup-form {
+  max-width: 300px;
+  margin: 0 auto;
+  padding: 20px;
+  border-radius: 5px;
+}
+
+h2 {
+  text-align: center;
+  color: #333;
+}
+
+.form-group {
+  margin-bottom: 10px;
+}
+
+label {
+  display: block;
+  font-weight: bold;
+}
+
+input[type="email"],
+input[type="password"] {
+  width: 100%;
+  padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 3px;
+}
+
+button.btn {
+  display: block;
+  width: 100%;
+  padding: 10px;
+  background-color: #333;
+  color: #fff;
+  border: none;
+  border-radius: 3px;
+  cursor: pointer;
+}
+
+button.btn:hover {
+  background-color: #555;
+}
