--- a/Final Lab Exam FA20-BCS-042/views/dashboard.ejs
+++ b/Final Lab Exam FA20-BCS-042/views/dashboard.ejs
@@ -1,5 +1,5 @@
 <div class="container">
-  <h1 class="mt-5">Games List</h1>
+  <h1 class="mt-5 text-center">AVAILABLE GAMES</h1>
   <div class="row">
     <% games.forEach(function(game) { %>
     <div class="col-md-4 mt-4">
