--- a/Final Lab Exam FA20-BCS-042/views/index.ejs
+++ b/Final Lab Exam FA20-BCS-042/views/index.ejs
@@ -20,6 +20,10 @@
       <form id="signupForm" action="/signup" method="POST" class="signup-form d-none">
         <h2>SIGNUP</h2>
         <div class="form-group">
+          <label for="signupName">Full Name:</label>
+          <input type="text" id="signupName" name="fullname" class="form-control" autocomplete="off" required>
+        </div>
+        <div class="form-group">
           <label for="signupEmail">Email:</label>
           <input type="email" id="signupEmail" name="email" class="form-control" autocomplete="off" required>
         </div>
@@ -30,6 +34,7 @@
         <button type="submit" class="btn btn-primary">Signup</button>
         <p>Already have an account? <a href="#" id="loginLink">Login</a></p>
       </form>
+      
     </div>
   </div>
 </div>
