--- a/Final Lab Exam FA20-BCS-042/views/layout.ejs
+++ b/Final Lab Exam FA20-BCS-042/views/layout.ejs
@@ -39,7 +39,7 @@
 
     <!-- Footer -->
     <footer class="bg-light text-center mt-4 p-3">
-        <p>&copy; 2023 Your Website. All rights reserved.</p>
+        <p>ARBAZ AHMAD FA20-BCS-042</p>
     </footer>
 </div>
 
