--- a/Final Lab Exam FA20-BCS-042/views/layout0.ejs
+++ b/Final Lab Exam FA20-BCS-042/views/layout0.ejs
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/css/bootstrap.min.css">
-    <link rel="stylesheet" href="/stylesheets/layout.css">
+    <link rel="stylesheet" href="/stylesheets/layoutlogin.css">
     <title>Your Website</title>
 </head>
 <body>
@@ -23,7 +23,7 @@
 
     <!-- Footer -->
     <footer class="text-center mt-4 p-3">
-        <p>ARBAZ AHMAD       FA20-BCS-042</p>
+        <p>ARBAZ AHMAD FA20-BCS-042</p>
     </footer>
 </div>
 
