--- a/Final Lab Exam FA20-BCS-042/public/stylesheets/layout.css
+++ b/Final Lab Exam FA20-BCS-042/public/stylesheets/layout.css
@@ -24,3 +24,24 @@
 
 }
 
+html {
+  height: 100%;
+}
+
+body {
+  min-height: 100%;
+  display: flex;
+  flex-direction: column;
+}
+
+.content-wrapper {
+  flex: 1; /* Use flex: 1 to allow the content to expand and fill the remaining space */
+}
+
+footer {
+  width: 100%;
+  background-color: black;
+  color: white;
+  padding: 10px;
+  margin-top: auto; /* Push the footer to the bottom */
+}
