--- a/Final Lab Exam FA20-BCS-042/views/index.ejs
+++ b/Final Lab Exam FA20-BCS-042/views/index.ejs
@@ -20,7 +20,7 @@
       <form id="signupForm" action="/signup" method="POST" class="signup-form d-none">
         <h2>SIGNUP</h2>
         <div class="form-group">
-          <label for="signupName">Full Name:</label>
+          <label for="signupName">Name:</label>
           <input type="text" id="signupName" name="fullname" class="form-control" autocomplete="off" required>
         </div>
         <div class="form-group">
