--- a/Final Lab Exam FA20-BCS-042/views/layout.ejs
+++ b/Final Lab Exam FA20-BCS-042/views/layout.ejs
@@ -6,12 +6,12 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/css/bootstrap.min.css">
     <link rel="stylesheet" href="/stylesheets/layout.css">
-    <title>Your Website</title>
+    <title>ARBAZ AHMAD</title>
 </head>
 <body>
     <div class="content-wrapper">
     <nav class="navbar navbar-expand-lg ">
-        <a class="navbar-brand" href="#">
+        <a class="navbar-brand" href="/">
           <img src="/images/logo.png" alt="Logo" class="logo">
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -38,7 +38,7 @@
     </div>
 
     <!-- Footer -->
-    <footer class="bg-light text-center mt-4 p-3">
+    <footer class="text-center mt-4 p-3">
         <p>ARBAZ AHMAD FA20-BCS-042</p>
     </footer>
 </div>
