--- a/Final Lab Exam FA20-BCS-042/views/layout0.ejs
+++ b/Final Lab Exam FA20-BCS-042/views/layout0.ejs
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/css/bootstrap.min.css">
     <link rel="stylesheet" href="/stylesheets/layoutlogin.css">
-    <title>Your Website</title>
+    <title>ARBAZ</title>
 </head>
 <body>
     <div class="content-wrapper">
