--- a/Final Lab Exam FA20-BCS-042/views/dashboard.ejs
+++ b/Final Lab Exam FA20-BCS-042/views/dashboard.ejs
@@ -1,49 +1,42 @@
-
 <link rel="stylesheet" href="/stylesheets/dashboard.css">
 <div class="container">
-  <h1 class="mt-5 text-center">AVAILABLE GAMES</h1>
   <div class="row">
-    <% games.forEach(function(game) { %>
+    <div class="mt-4">
+      <button type="button" class="btn btn-success" id="addCategoryBtn">Add Category</button>
+      <form action="/categories" method="POST" class="add-category-form d-none mt-4">
+        <div class="form-group">
+          <label for="categoryTitle">Title:</label>
+          <input type="text" class="form-control" id="categoryTitle" name="title">
+        </div>
+        <div class="form-group">
+          <label for="categoryPublished">Published:</label>
+          <select class="form-control" id="categoryPublished" name="published">
+            <option value="yes">Yes</option>
+            <option value="no">No</option>
+          </select>
+        </div>
+        <div class="form-group">
+          <label for="categoryDescription">Description:</label>
+          <input type="text" class="form-control" id="categoryDescription" name="description">
+        </div>
+        <button type="submit" class="btn btn-success">Submit</button>
+      </form>
+    </div>
+    <% categories.forEach(function(category) { %>
     <div class="col-md-4 mt-4">
-      <div class="card shadow">
+      <div class="card" data-category-id="<%= category._id %>">
         <div class="card-body">
-          <h5 class="card-title"><%= game.name %></h5>
-          <p class="card-text">Price: <%= game.price %></p>
-          <form id="deleteForm_<%= game._id %>" class="delete-form">
+          <h5 class="card-title"><%= category.title %></h5>
+          <p class="card-text">Published: <%= category.published ? 'Yes' : 'No' %></p>
+          <p class="card-description"><%= category.description %></p>
+          <form id="deleteForm_<%= category._id %>" class="delete-form">
             <input type="hidden" name="_method" value="DELETE">
             <button type="button" class="btn btn-danger delete-btn">Delete</button>
           </form>
-          <button type="button" class="btn btn-primary edit-btn">Edit</button>
-          <div class="edit-form d-none mt-3">
-            <div class="form-group">
-              <label for="editName">Name:</label>
-              <input type="text" class="form-control" id="editName" value="<%= game.name %>">
-            </div>
-            <div class="form-group">
-              <label for="editPrice">Price:</label>
-              <input type="text" class="form-control" id="editPrice" value="<%= game.price %>">
-            </div>
-            <button type="button" class="btn btn-primary save-btn">Save</button>
-            <button type="button" class="btn btn-secondary cancel-btn">Cancel</button>
-          </div>
         </div>
       </div>
     </div>
     <% }) %>
   </div>
-  <div class="mt-4">
-    <button type="button" class="btn btn-success addGameBtn" id="addGameBtn">Add Game</button>
-    <form action="/games" method="POST" class="add-game-form d-none mt-4">
-      <div class="form-group">
-        <label for="gameName">Name:</label>
-        <input type="text" class="form-control" id="gameName" name="name">
-      </div>
-      <div class="form-group">
-        <label for="gamePrice">Price:</label>
-        <input type="text" class="form-control" id="gamePrice" name="price">
-      </div>
-      <button type="submit" class="btn btn-success">Submit</button>
-    </form>
-  </div>
 </div>
-<script src="/javascripts/client.js"></script>
+<script src="/javascripts/js.js"></script>
