--- a/Final Lab Exam FA20-BCS-042/public/stylesheets/layout.css
+++ b/Final Lab Exam FA20-BCS-042/public/stylesheets/layout.css
@@ -3,13 +3,16 @@
     width: 50px;
     height: 40px;
     padding-left: 10px;
+    display: block;
 }
 
 .navbar {
   font-family:monospace;
   font-weight: bold;
   letter-spacing: 1px;
-  background-color: black;
+  background-color: white;
+  justify-content: center;
+  
   
 }
 
@@ -20,7 +23,7 @@
 
 .navbar-nav .nav-link {
   font-size: 18px;
-  color: white;
+  color: black
 
 }
 
@@ -35,7 +38,7 @@ body {
 }
 
 .content-wrapper {
-  flex: 1; /* Use flex: 1 to allow the content to expand and fill the remaining space */
+  flex: 1; 
 }
 
 footer {
@@ -43,5 +46,5 @@ footer {
   background-color: black;
   color: white;
   padding: 10px;
-  margin-top: auto; /* Push the footer to the bottom */
+  margin-top: auto; 
 }
