--- a/Final Lab Exam FA20-BCS-042/views/layout.ejs
+++ b/Final Lab Exam FA20-BCS-042/views/layout.ejs
@@ -6,11 +6,11 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/css/bootstrap.min.css">
     <link rel="stylesheet" href="/stylesheets/layout.css">
-    <title>ARBAZ AHMAD</title>
+    <title>Arbaz Ahmad</title>
 </head>
 <body>
     <div class="content-wrapper">
-    <nav class="navbar navbar-expand-lg ">
+    <nav class="navbar navbar-expand-lg text-center ">
         <a class="navbar-brand" href="/">
           <img src="/images/logo.png" alt="Logo" class="logo">
         </a>
@@ -18,17 +18,6 @@
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav mx-auto">
-            <li class="nav-item active">
-              <a class="nav-link" href="#">HOME</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">ABOUT</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">SERVICES</a>
-            </li>
-          </ul>
         </div>
       </nav>
       
